// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser if statements single-line if parses if only 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "kind": 15,
        "line": 1,
        "literal": undefined,
      },
    },
    "elseBranch": undefined,
    "elseIfs": Array [],
    "thenBranch": Expression {
      "expression": Binary {
        "left": Variable {
          "name": Object {
            "kind": 21,
            "line": 1,
            "text": "foo",
          },
        },
        "right": Literal {
          "value": BrsBoolean {
            "kind": 1,
            "value": true,
          },
        },
        "token": Object {
          "kind": 19,
          "line": 1,
          "literal": undefined,
        },
      },
    },
  },
]
`;

exports[`parser if statements single-line if parses if-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "kind": 15,
        "line": 1,
        "literal": undefined,
      },
    },
    "elseBranch": Expression {
      "expression": Binary {
        "left": Variable {
          "name": Object {
            "kind": 21,
            "line": 1,
            "text": "foo",
          },
        },
        "right": Literal {
          "value": BrsBoolean {
            "kind": 1,
            "value": true,
          },
        },
        "token": Object {
          "kind": 19,
          "line": 1,
          "literal": undefined,
        },
      },
    },
    "elseIfs": Array [],
    "thenBranch": Expression {
      "expression": Binary {
        "left": Variable {
          "name": Object {
            "kind": 21,
            "line": 1,
            "text": "foo",
          },
        },
        "right": Literal {
          "value": BrsBoolean {
            "kind": 1,
            "value": true,
          },
        },
        "token": Object {
          "kind": 19,
          "line": 1,
          "literal": undefined,
        },
      },
    },
  },
]
`;

exports[`parser if statements single-line if parses if-elseif-else 1`] = `Array []`;
